Fix responsive footer and eliminate whitespace on the right in iphone.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,11 @@ body {
   background-color: $macromet-white;
 }
 
+html, body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
 .quienes {
   width: 100%;
   background-color: $macromet-darkblue;
@@ -67,14 +72,10 @@ img {
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
-// .navbar-inverse {
-//   background-color: $macromet-red;
-//   border-color: $macromet-red;
-// }
+
 
 .nav.navbar-nav.navbar-right .active a {
   color: $macromet-darkblue;
-  // background-color: $macromet-yellow;
 }
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
@@ -383,6 +384,7 @@ footer {
     text-align: center;
   }
   .social-links {
+    text-align: right;
     padding-right: 30px;
     margin-bottom: 0;
     li {
@@ -454,8 +456,16 @@ footer {
 // customization of pills on the portafolio page
 
 
+/* PROCESS CSS
+-------------------------------------------------- */
 
+.proc-item {
+  text-align: center;
+}
 
+.proc-step {
+  margin: 20px 0 50px;
+}
 
 // =================================================================
 // =================================================================
@@ -464,6 +474,25 @@ footer {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+
+@media (max-width: 992px) {
+  
+  footer {
+    .social-links {
+      margin-top: 20px;
+      text-align: left;
+      li {
+        display: inline;
+        padding-right: 10px;
+      }
+    }
+    #copyright {
+      margin-top: 20px;
+      padding-left: 55px;
+      text-align: left;
+    }
+  }
+}
 
 @media (min-width: 880px) {
   /* Navbar positioning foo */
@@ -498,7 +527,9 @@ footer {
   .titulo {
     font-size: 50px;
   }
+
 }
+
 
 @media (min-width: 992px) {
   .featurette-heading {
